# cad-preproc

./: README.md  cli.py  geometry.py  graph.py  io.py  layers.py  pipeline.py  pyproject.toml  requeriments.txt  schemas.py  units.py
configs/: default.yml
